@@ -58,7 +58,7 @@ Cezary M. Kruk <c.kruk@bigfoot.com>
 	- slackware2.wmc
 	- slackware3.wmc
 
-Three objects recommended by Doug Torrance <dtorrance@monmouthcollege.edu>
+Three objects recommended by Doug Torrance <dtorrance@piedmont.edu>
 
 	- X-lines.wmc
 	- X-planes.wmc
