@@ -21,9 +21,9 @@ them to your needs is up to you.
 
 Installation
 --------------------------------------------------------------
-1)  $ tar -zxf wmcube-1.0.1.tar.gz
+1)  $ tar -zxf wmcube-1.0.2.tar.gz
 
-2)  $ cd wmcube-1.0.1/wmcube
+2)  $ cd wmcube-1.0.2/wmcube
 
 3)  $ make                    # if you run Linux
     or:
