@@ -1,11 +1,11 @@
-wmcube 1.0.1
+wmcube 1.0.2
 ---------------------------------------------------------------
 Author: Cezary M. Kruk
         c.kruk@bigfoot.com
         http://linux-bsd-unix.strefa.pl
 
 Contributors:
-        Doug Torrance <dtorrance@monmouthcollege.edu>
+        Doug Torrance <dtorrance@piedmont.edu>
 
 wmCube 0.98
 ---------------------------------------------------------------
@@ -83,6 +83,6 @@ detailed as you can.
 
 Copyright
 ---------------------------------------------------------------
-wmcube (C) 2014-2015 by Cezary M. Kruk, Wrocław, Poland
+wmcube (C) 2014-2016 by Cezary M. Kruk, Wrocław, Poland
 wmCube (C) 2000-2001 by Robert Kling, Lulea, Sweden
 
