@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.TH WMCUBE 1 "February 19, 2015" "Version 1.0.1" "3D object CPU Load display applet"
+.TH WMCUBE 1 "February 28, 2016" "Version 1.0.2" "3D object CPU Load display applet"
 
 .SH NAME
 wmcube \-\- spinning 3D object that shows the current CPU load
@@ -55,16 +55,16 @@ use blue image.
 display this help.
 
 .SH TIPS & TRICKS
-By combining together -RG, -RB, or -GB switches you get yellow, magenta, or cyan
-images.  Combining -RGB switches produces the gray image \-\- the same as without
+By combining together \-RG, \-RB, or \-GB switches you get yellow, magenta, or cyan
+images.  Combining \-RGB switches produces the gray image \-\- the same as without
 any swiches.
 
 .SH PROGRAM AUTHORS
-wmcube 1.0.1:
+wmcube 1.0.2:
 .IP
-(C) 2014-2015 Cezary M. Kruk  <\fIc.kruk@bigfoot.com\fP>
+(C) 2014-2016 Cezary M. Kruk  <\fIc.kruk@bigfoot.com\fP>
 .IP
-(C)      2015 Doug Torrance
+(C) 2015-2016 Doug Torrance <\fIdtorrance@piedmont.edu\fP>
 .LP
 wmCube 0.98:
 .IP
@@ -77,9 +77,9 @@ Filip Van Raemdonck <mechanix@digibel.org> \-\- manpage for version 0.98 of wmcu
 .LP
 Sandro Tosi <matrixhasu@gmail.com> \-\- manpage for version 0.99-pre1 of wmcube.
 .LP
-Doug Torrance <dtorrance@monmouthcollege.edu> \-\- manpage for version 1.0.0.
+Doug Torrance <dtorrance@piedmont.edu> \-\- manpage for version 1.0.0.
 .LP
-Cezary M. Kruk <c.kruk@bigfoot.com> \-\- manpage for version 1.0.1.
+Cezary M. Kruk <c.kruk@bigfoot.com> \-\- manpage for version 1.0.2.
 
 .SH SEE ALSO
 .BR fvwm (1), wmaker (1)
