@@ -5,7 +5,8 @@
 Author: Kresten Krab Thorup
 
 Many modifications by Alfredo K. Kojima
- 
+
+Modified by Douglas Torrance
 
 This file is part of GNU CC.
 
@@ -38,7 +39,7 @@ Boston, MA 02111-1307, USA.  */
 
 /* Return a cons cell produced from (head . tail) */
 
-INLINE LinkedList* 
+LinkedList* 
 list_cons(void* head, LinkedList* tail)
 {
   LinkedList* cell;
@@ -51,7 +52,7 @@ list_cons(void* head, LinkedList* tail)
 
 /* Return the length of a list, list_length(NULL) returns zero */
 
-INLINE int
+int
 list_length(LinkedList* list)
 {
   int i = 0;
@@ -66,7 +67,7 @@ list_length(LinkedList* list)
 /* Return the Nth element of LIST, where N count from zero.  If N 
    larger than the list length, NULL is returned  */
 
-INLINE void*
+void*
 list_nth(int index, LinkedList* list)
 {
   while(index-- != 0)
@@ -81,7 +82,7 @@ list_nth(int index, LinkedList* list)
 
 /* Remove the element at the head by replacing it by its successor */
 
-INLINE void
+void
 list_remove_head(LinkedList** list)
 {
   if (!*list) return;  
@@ -101,7 +102,7 @@ list_remove_head(LinkedList** list)
 
 /* Remove the element with `car' set to ELEMENT */
 /*
-INLINE void
+void
 list_remove_elem(LinkedList** list, void* elem)
 {
   while (*list)
@@ -112,7 +113,7 @@ list_remove_elem(LinkedList** list, void* elem)
     }
 }*/
 
-INLINE LinkedList *
+LinkedList *
 list_remove_elem(LinkedList* list, void* elem)
 {
     LinkedList *tmp;
@@ -132,7 +133,7 @@ list_remove_elem(LinkedList* list, void* elem)
 
 /* Return element that has ELEM as car */
 
-INLINE LinkedList*
+LinkedList*
 list_find(LinkedList* list, void* elem)
 {
   while(list)
@@ -146,7 +147,7 @@ list_find(LinkedList* list, void* elem)
 
 /* Free list (backwards recursive) */
 
-INLINE void
+void
 list_free(LinkedList* list)
 {
   if(list)
@@ -158,7 +159,7 @@ list_free(LinkedList* list)
 
 /* Map FUNCTION over all elements in LIST */
 
-INLINE void
+void
 list_mapcar(LinkedList* list, void(*function)(void*))
 {
   while(list)
